// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Markdown> handle images 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "flexGrow": 1,
          },
          Object {
            "height": 0,
          },
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        accessibilityLabel="alt text"
        accessible={true}
        indicator={true}
        onError={[Function]}
        onLayout={[Function]}
        onLoad={[Function]}
        onLoadStart={[Function]}
        source={
          Object {
            "uri": "file://path/to/foo.png",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Markdown> handle links 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={Object {}}
    />
  </View>
</View>
`;
